# robosherlock_knowrob

./: CMakeLists.txt  README  package.xml
launch/: json_prolog.launch
owl/: rs_components.owl  rs_objects.owl
prolog/: init.pl  rs_interface.pl  rs_plan_pipeline.pl  rs_query_interface.pl  rs_query_reasoning.pl
scripts/: generateOWLFromXml.py  planPipeline.py
src/: PrologQueries.cpp
